--- a/Views/Popups/DeleteDialoguePage.xaml
+++ b/Views/Popups/DeleteDialoguePage.xaml
@@ -3,20 +3,49 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
              x:Class="GymDay.Views.Popups.DeleteDialoguePage"
+             Color="Transparent"
+             HorizontalOptions="Fill"
 		     >
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-		
-		<Button 
-			Text="Yes"
-			Clicked="Yes_Button_Clicked"
-			/>
-		<Button
-			Text="No_Button_Clicked"
-			Clicked="No_Button_Clicked"
-			/>
-    </VerticalStackLayout>
+    <Grid
+        HorizontalOptions="FillAndExpand"
+        VerticalOptions="CenterAndExpand"
+        Margin="5"
+        Padding="5">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill"
+            VerticalTextAlignment="Center"
+            HorizontalTextAlignment="Center"
+            Text="Delete program?" 
+            />
+
+        <Button 
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.RowSpan="1"
+            Text="OK"
+            Clicked="Yes_Button_Clicked"
+            />
+
+        <Button
+            Grid.Column="1"
+            Grid.Row="1"
+            Grid.RowSpan="1"
+            Text="CANCEL"
+            Clicked="No_Button_Clicked" 
+            />
+    </Grid>
 </mct:Popup>
